added validation and fixed bugs
